--- a/socrates/lib/activities/views/activities-forms.jade
+++ b/socrates/lib/activities/views/activities-forms.jade
@@ -1,17 +1,17 @@
 include  ../../../views/formComponents
 
-mixin activityform(socratesEventStore, roomTypes)
+mixin activityform(socratesReadModel, roomTypes)
   form(id='activityform', action='/activities/submit', method='post')
     +csrf
-    if (socratesEventStore.id())
-      +hidden('id', socratesEventStore.id())
-    +hidden('previousUrl', socratesEventStore.url())
+    if (socratesReadModel.id())
+      +hidden('id', socratesReadModel.id())
+    +hidden('previousUrl', socratesReadModel.url())
     fieldset
       .row
         .col-md-12
           +submitButtons('general.save')
           legend
-            if (socratesEventStore.id())
+            if (socratesReadModel.id())
               | Edit SoCraTes
             else
               | Create SoCraTes
@@ -20,14 +20,14 @@ mixin activityform(socratesEventStore, roomTypes)
               .row
                 .col-xs-6(style='padding-right:5px')
                   .col-xs-6(style='padding-left:0px;padding-right:3px')
-                    +date('startDate', t('activities.start'), socratesEventStore.startTime().locale(language).format('DD/MM/YYYY'), t('activities.tooltip.start'))
+                    +date('startDate', t('activities.start'), socratesReadModel.startTime().locale(language).format('DD/MM/YYYY'), t('activities.tooltip.start'))
                   .col-xs-6(style='padding-left:3px;padding-right:0px')
-                    +time('startTime', socratesEventStore.startTime().locale(language).format('HH:mm'))
+                    +time('startTime', socratesReadModel.startTime().locale(language).format('HH:mm'))
                 .col-xs-6(style='padding-left:5px')
                   .col-xs-6(style='padding-left:0px;padding-right:3px')
-                    +date('endDate', t('activities.end'), socratesEventStore.endTime().locale(language).format('DD/MM/YYYY'), t('activities.tooltip.end'))
+                    +date('endDate', t('activities.end'), socratesReadModel.endTime().locale(language).format('DD/MM/YYYY'), t('activities.tooltip.end'))
                   #dates.col-xs-6(style='padding-left:3px;padding-right:0px')
-                    +time('endTime', socratesEventStore.endTime().locale(language).format('HH:mm'))
+                    +time('endTime', socratesReadModel.endTime().locale(language).format('HH:mm'))
           .row
             .col-md-12
               hr
@@ -37,7 +37,7 @@ mixin activityform(socratesEventStore, roomTypes)
                 .col-xs-3.col-sm-2
                   +controlLabel('anzahl', t('activities.count'), t('activities.tooltip.count'))
               each name in roomTypes
-                +resourceRow(name, socratesEventStore.quotaFor(name))
+                +resourceRow(name, socratesReadModel.quotaFor(name))
       .row
         .col-md-12
           hr
