--- a/socrates/frontendtests/fixtures/forms.jade
+++ b/socrates/frontendtests/fixtures/forms.jade
@@ -2,7 +2,7 @@ include ../../lib/activities/views/activities-forms
 include ../../lib/registration/views/participationinfoform
 include ../../lib/members/views/userinfoform
 
-+activityform(socratesEventStore, roomTypes)
++activityform(socratesReadModel, roomTypes)
 
 +participationinfoform(roomOptions, registration)
 
