--- a/socrates/lib/activities/views/edit.jade
+++ b/socrates/lib/activities/views/edit.jade
@@ -10,4 +10,4 @@ block title
   | Edit SoCraTes
 
 block content
-  +activityform(activity, roomTypes)
+  +activityform(socratesReadModel, roomTypes)
