--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -90,8 +90,7 @@ block content
               h5
                 +extlink('http://socrates-fr.github.io', 'SoCraTes France')
                 br
-                small &nbsp
-                // TODO update when they have new dates: small 24 - 27 Sept 2015, Rochegude
+                small 27 - 30 Oct 2016, Rochegude
             .col-sm-6
               h5
                 +extlink('http://socratesbe.org', 'SoCraTes BE')
