Wiki now uses the activity to display the participants in 2015 and before, and uses the eventstore to display the participants in 2016 and after.

--- a/socrates/lib/wiki/views/participants.jade
+++ b/socrates/lib/wiki/views/participants.jade
@@ -7,7 +7,7 @@ block title
 block content
   .row
     .col-md-12
-      each participant in activity.participants
+      each participant in participants
         div(id=participant.nickname())
           if accessrights.canEditMember(participant)
             h4
