Comment update in config file. Deposit text updated. Placed Registration "Countdown" in the Button

--- a/socrates/lib/registration/views/participationinfoform.jade
+++ b/socrates/lib/registration/views/participationinfoform.jade
@@ -22,7 +22,7 @@ mixin participationinfoform(activity, roomOptions, registration)
       h3 Deposit
       p.
         This year we decided against collecting a deposit. We trust that you will notify us if you cannot participate.
-        If you do not notify us, you will be charged for the first night.
+        If you do not notify us until 24th August, you will be charged for the first night.
 
       h3 Payment and Invoice
       p.
