--- a/socrates/lib/notifications/jade/registrationConfirmation.jade
+++ b/socrates/lib/notifications/jade/registrationConfirmation.jade
@@ -4,20 +4,14 @@ html
     h2 SoCraTes Registration Confirmation
     p.
       Hello #{member.displayName()},
-    p Congratulations! You now have a guaranteed spot for the SoCraTes Conference 2016.
+    p Congratulations! You are now a participant of the SoCraTes Conference 2016.
 
     if bookingdetails.fromWaitinglist
       p If you can't make it for some reason, please tell us so we can give the spot to the next person on the waitinglist.
 
-    h3 Paying the Deposit
-    p To complete your registration, please pay the deposit of #{socratesConstants.depositAmount} €. In order to do so, please have a look
-      | at the payment details for credit card and bank transfer which you can find at #{' '}
-      a(href='#{url}/payment/socrates') #{url}/payment/socrates
-    p As soon as we receive your payment, we will send you a payment confirmation email.
-
     h3 Your Booking
     p
-      | You have booked a #{' '} 
+      | You have booked a #{' '}
       b #{bookingdetails.room}
       | #{' '} for #{' '}
       b #{bookingdetails.nights}
@@ -37,6 +31,8 @@ html
 
     p You can review your booking information at #{' '}
       a(href='#{url}/registration') #{url}/registration
+
+    p You will receive a billable receipt during the event.
 
     p If you have questions, need help or want to give feedback, just reply to this e-mail.
 
