--- a/socrates/lib/site/views/index.jade
+++ b/socrates/lib/site/views/index.jade
@@ -16,7 +16,7 @@ block content
       .row
         .col-xs-12
           .page-header
-            h2 What it is about
+            h2 SoCraTes in a nutshell
 
           p This event is about the sustainable creation of useful software in a responsible way.
 
