--- a/socrates/views/layoutComponents.jade
+++ b/socrates/views/layoutComponents.jade
@@ -50,9 +50,9 @@ mixin navbar(xs)
           +loginMenu
       ul.nav.navbar-nav
         li(data-nav-index=''): a(href='/', title='Home', style='padding-left: 5px') SoCraTes 2016
-        li(data-nav='schedule.html'): a(href='/schedule.html', title='Schedule')
+        li(data-nav='schedule.html'): a(href='/schedule.html', title='Format')
           span.glyphicon.glyphicon-calendar
-          span.hidden-sm  Schedule
+          span.hidden-sm  Format
         li(data-nav='location.html'): a(href='/location.html', title='Location')
           span.glyphicon.glyphicon-globe
           span.hidden-sm  Location
