--- a/socrates/lib/registration/views/participate.jade
+++ b/socrates/lib/registration/views/participate.jade
@@ -12,11 +12,11 @@ block title
   | Registration - SoCraTes
 block content
   .page-header
-    if(registrationTuple.duration === 'waitinglist')
-      h1 Waitinglist Registration<br>
-    else
+    if(registrationTuple.resourceName && registrationTuple.duration)
       h1 Registration #{' '}
         small Personal Information
+    else
+      h1 Waitinglist Registration<br>
     if (!!expiresAt)
       p.
         You now have a reserved spot at SoCraTes. This reservation is held for #{expiresIn} minutes
@@ -29,8 +29,8 @@ block content
         +csrf
         +hidden('activityUrl', registrationTuple.activityUrl)
         +hidden('resourceName', registrationTuple.resourceName)
-        +hidden('desiredRoomTypes', registrationTuple.desiredRoomTypes)
         +hidden('duration', registrationTuple.duration)
+        +hidden('desiredRoomTypes', registrationTuple.desiredRoomTypes)
         fieldset
           +memberinfoform(member, subscriber, 'members.edit_registration')
           +userinfoform(addon, participation, registrationTuple.resourceName && registrationTuple.resourceName.indexOf('bed_in_') > -1)
@@ -41,7 +41,7 @@ block content
           | not tolerate harassment of conference participants in any form. With your registration, you accept this and 
           a(href='/values.html', target='_blank') our code of conduct
           | #{' '} in general.
-        if(registrationTuple.duration === 'waitinglist')
-          +memberSubmitButtons('Put me on the waitinglist!')
-        else
+        if(registrationTuple.resourceName && registrationTuple.duration)
           +memberSubmitButtons('I really do want to participate!')
+        else
+          +memberSubmitButtons('Put me on the waitinglist!')
