--- a/socrates/lib/registration/views/participate.jade
+++ b/socrates/lib/registration/views/participate.jade
@@ -11,7 +11,7 @@ block scripts
 block title 
   | Registration - SoCraTes
 block content
-  -var asParticipant = registrationTuple.resourceName && registrationTuple.duration
+  -var asParticipant = registrationTuple.roomType && registrationTuple.duration
   .page-header
     if(asParticipant)
       h1 Registration #{' '}
@@ -30,12 +30,12 @@ block content
       .col-sm-12
         +csrf
         +hidden('activityUrl', registrationTuple.activityUrl)
-        +hidden('resourceName', registrationTuple.resourceName)
+        +hidden('roomType', registrationTuple.roomType)
         +hidden('duration', registrationTuple.duration)
         +hidden('desiredRoomTypes', registrationTuple.desiredRoomTypes)
         fieldset
           +memberinfoform(member, subscriber, 'members.edit_registration')
-          +userinfoform(addon, participation, registrationTuple.resourceName && registrationTuple.resourceName.indexOf('bed_in_') > -1)
+          +userinfoform(addon, participation, registrationTuple.roomType && registrationTuple.roomType.indexOf('bed_in_') > -1)
     
     .row(style='margin-bottom: 10px')
       .col-sm-12
@@ -43,7 +43,7 @@ block content
           | not tolerate harassment of conference participants in any form. With your registration, you accept this and 
           a(href='/values.html', target='_blank') our code of conduct
           | #{' '} in general.
-        if(registrationTuple.resourceName && registrationTuple.duration)
+        if(registrationTuple.roomType && registrationTuple.duration)
           +memberSubmitButtons('I really do want to participate!')
         else
           +memberSubmitButtons('Put me on the waitinglist!')
